<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTCompleto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="Enviar">Enviar</string>
    <string name="BuscarDispositivo">Buscar</string>
    <string name="Conectar">Conectar</string>
    <string name="MostrarEnlazados">Enlazados</string>
    <string name="ActivarBluetooth">Activar bluetooth</string>
    <string name="DesactivarBluetooth">Desactivar bluetooth</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Salir">Salir</string>

    <!-- Mensajes -->
    <string name="SinConexion">Conexión actual: SIN CONEXIÓN</string>
    <string name="ConexionActual">Conexión actual:</string>
    <string name="ConectandoA">Conectando a</string>
    <string name="IniciandoDescubrimiento">Iniciando búsqueda de dispositivos bluetooth&#8230;</string>
    <string name="ErrorIniciandoDescubrimiento">Error al iniciar búsqueda de dispositivos bluetooth</string>
    <string name="DetectadoDispositivo">Detectado dispositivo</string>
    <string name="FinBusqueda">Fin de la búsqueda</string>
    <string name="EnviandoMensaje">Enviando mensaje</string>
    <string name="MsgConfirmarConexion">¿Conectar al dispositivo</string>
    <string name="MsgErrorConexion">Error al enviar al mensaje: no hay conexiones activas</string>

</resources>